Bug 55309 - Fix udisks_daemon_util_on_same_seat to work if built with systemd support, but not booted with it
Summary: Fix udisks_daemon_util_on_same_seat to work if built with systemd support, bu...
Status: RESOLVED FIXED
Alias: None
Product: udisks
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: David Zeuthen (not reading bugmail)
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-25 09:11 UTC by Vincent Untz
Modified: 2012-09-25 14:31 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Use sd_booted() to find if booted with systemd (1.72 KB, text/plain)
2012-09-25 09:11 UTC, Vincent Untz
Details

Description Vincent Untz 2012-09-25 09:11:36 UTC
Created attachment 67668 [details]
Use sd_booted() to find if booted with systemd

As part of https://bugzilla.novell.com/show_bug.cgi?id=769570, it was pointed out that udisks assumes that building with systemd leads to booting with systemd. This is not always true.

Here's a small patch for this.
Comment 1 David Zeuthen (not reading bugmail) 2012-09-25 14:31:35 UTC
I don't think we generally want to support use-cases "build with systemd support but be able to run in an environment without systemd" but this patch is so simple that I'm taking it anyway.

Committed with an added reference to this bug. Thanks.

http://cgit.freedesktop.org/udisks/commit/?id=e07849db11c8f5cfdeaf2dd3bb9b430c99c376c7


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.